# JHiGHS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pom.xml
.github/workflows/: checkPackaging  checkPackaging.yml  release.yml
scripts/: build-native.sh
src/main/java/nl/jessenagel/jhighs/: HiGHS.java  HighsStatus.java  ModelStatus.java  NativeLibraryLoader.java  Solution.java  VarType.java
src/main/native/cpp/: highs_jni.cpp  jni_utils.cpp  jni_utils.h
src/test/java/nl/jessenagel/jhighs/: HiGHSTest.java
